nginx-canary-trafficRouting-istio/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  workloadRef:                                 # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: nginx
  strategy:
    canary:
      canaryService: nginx-canary  # required
      stableService: nginx-stable  # required
      # Metadata which will be attached to the canary pods. This metadata will
      # only exist during an update, since there are no canary pods in a fully
      # promoted rollout.
      #canaryMetadata:
      #  annotations:
      #    role: canary
      #  labels:
      #    role: canary
      # metadata which will be attached to the stable pods
      #stableMetadata:
      #  annotations:
      #    role: stable
      #  labels:
      #    role: stable
      trafficRouting:
        istio:
           virtualService: 
            name: istio-vs
            routes:
            - primary
      #maxSurge: 0
      #maxUnavailable: 1
      #scaleDownDelaySeconds: 10
      dynamicStableScale: true ## Canary dynamicStableScale cannot be used with scaleDownDelaySeconds
      steps:
      - setWeight: 25
      - pause: {}
      - setHeaderRouting:
          match:
            - headerName: "X-Canary"
              headerValue:
                exact: "iwantsit"
      #- pause:
      #    duration: 1h # 1 hour
      - setWeight: 50
      - pause: {} # pause indefinitely
      - setWeight: 75
      - pause: {} # pause indefinitely
