nginx-canary-trafficRouting-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs
spec:
  hosts:
  - "*"
  gateways:
  - dev-istio-gateway-canary-istio
  http:
    - name: primary
      route:
        - destination:
            host: dev-nginx-stable-canary-istio
          weight: 100
        - destination:
            host: dev-nginx-canary-canary-istio
          weight: 0
